examples/regressions/80_empty_match.an
// #80: match expression fails to assign variables when there are no constructors to match against
// Before the fix this crashed during codegen with an internal error message

match 3
| x -> x

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/regressions/80_empty_match.an:4:1
// 4 | match 3	// error: Expected a top-level item but found `match`
//   | ^^^^^
// 5 | | x -> x
// 
// examples/regressions/80_empty_match.an:5:1
// 4 | match 3
// 5 | | x -> x	// error: Expected a top-level item but found `|`
//   | ^
// 
// Found 2 errors and 0 warnings

